<resources>
    <string name="app_name">Doge</string>
    <string name="am_i_right"><u>Am I right?</u></string>
    <string name="am_i_right_post_feedback"><i>Thanks for your feeedback!</i></string>
    <string name="not_satisfied"><u>Not satisfied with the results?</u></string>

    <string name="image_description">Chosen Image</string>

    <string name="question_mark"><u>[?]</u></string>

    <string name="pick_file">Pick a File</string>
    <string name="take_photo">Take a Photo</string>
    <string name="start_inference">Identify</string>

    <string name="progress_string">Identifying…</string>

    <string name="about">About</string>
    <string name="best_results">Getting the best results</string>
    <string name="supported_breeds">Supported Breeds</string>

    <string name="about_text">
        How to read the results?</string>

    <string name="result_confidence_medium">I\'m not very confident but here are my predictions</string>
    <string name="result_confidence_low">Hmm....not really sure if its a dog, but if I had to guess here are my guesses</string>

    <string name="about_text_ans">
        The model outputs values, each one of which is called \"confidence\" value. This denotes the
        probability of the dog in the image belonging to a class (i.e breed). In other words, it
        simply denotes how confident the model is that the given image is of a dog of some particular
        breed.\n\n
        So, what this means is, that if, for example, the results for a dog are as follows\n\n
        Beagle - 98%\n
        Border Collie - 0.88%\n
        Saint Bernard - 0.1%
        etc\n\nthen this does NOT mean that the model thinks the dog is a mix of said breeds. The
        results only show the top 5 guesses and how confident the model is with each guess.
    </string>

    <string name="privacy_tnc">For privacy policy and terms and conditions
        <a href='https://www.sandeept.com/doge_privacy_policy'>click here</a></string>

    <string name="developed_by">Designed and Developed by</string>
    <string name="my_name">Sandeep Tadepalli</string>

    <string name="for_best_results">For getting the best results, make sure you have sufficient
    lighting, and the dog is in the centre of the frame and is in focus and in foreground. Make
    sure you have only one dog in the picture. Also, ensure that the dog is not wearing any
    clothing, like those fancy hats or sweaters, as they may affect results. Also do note that
    the face of the dog is visible to get the best possible result.\n\n
        If the dog is of mixed breed, then the accuracy of the results may suffer because it is almost
        impossible to determine the mix of breeds of a dog, just by looking at a photo without proper
        DNA Test.
    \n\nStill not getting accurate results?
    </string>

    <string name="click_here"><u>Click here</u></string>
    <string name="to_check">to check the list of supported breeds</string>

    <string name="supported_breeds_text">
        <b>List of supported breeds\n\n</b>
        1. Basenji\n
    2. Basset\n
    3. Beagle\n
    4. Bernese Mountain Dog\n
    5. Bloodhound\n
    6. Border Collie\n
    7. Chihuahua\n
    8. ChowChow\n
    9. Doberman\n
    10. German Shepherd\n
    11. German Short Haired Pointer\n
    12. Golden Retriever\n
    13. Great Dane\n
    14. Irish Wolfhound\n
    15. Labrador Retriever\n
    16. Pomeranian\n
    17. Poodle\n
    18. Pug\n
    19. Rottweiler\n
    20. Saint Bernard\n
    21. Samoyed\n
    22. Shih-Tzu\n
    23. Siberian Husky\n
    24. Welsh Springer Spaniel\n
    25. Yorkshire Terrier\n\n
        Support for more coming soon!!
    </string>
</resources>